@@ -1,6 +1,6 @@
 
 [main]
-summary=Intel Hybrid Energy Performance Optimizer [ILEO] TuneD profile
+summary=Intel Low Energy Optimizer [ILEO] TuneD profile
 
 [script]
 script=${i:PROFILE_DIR}/script.sh
