@@ -7,10 +7,12 @@ ww: 32.1
 Support Ubuntu distro 22.04 and 24.04
 Sanity checks completed on 24.04
 
-User guide updated 
+User guide updated
+removed debug log 
+for spiky utilization in bursty state, the lag will not go over 1 minute  
+
 
 List of all bugs Fixed: 
-
 https://jira.devtools.intel.com/browse/LNUX-7782
 https://jira.devtools.intel.com/browse/LNUX-7779
 https://jira.devtools.intel.com/browse/LNUX-7745
